--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -1,11 +1,19 @@
-.card {
+.card-lg {
+  background-color: white;
   display: block;
-  height: 50%;
   background-size: cover;
-
   box-shadow: 1px 2px 25px #1f6f8b;
   width: 50%;
-  margin: 5% auto;
+  margin: auto;
   padding: 20px;
   text-align: left;
+}
+
+.card-sm {
+  background-color: white;
+  box-shadow: 1px 2px 25px #1f6f8b;
+  width: 80%;
+  margin: 5% auto;
+  padding: 20px;
+  text-align: center;
 }
