--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -2,7 +2,7 @@
   background-color: white;
   display: block;
   background-size: cover;
-  box-shadow: 1px 2px 25px #1f6f8b;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   width: 50%;
   margin: auto;
   padding: 20px;
