--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -11,7 +11,7 @@
 
 .card-sm {
   background-color: white;
-  box-shadow: 1px 2px 25px #1f6f8b;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   width: 80%;
   margin: 5% auto;
   padding: 20px;
